modificaciones a los botones, ya quedan establecidos

--- a/pages/porque.html
+++ b/pages/porque.html
@@ -53,22 +53,28 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="../img /primera.jpg" class="d-block w-100" alt="...">
-                <button class="btn-center">.</button>
+                <button class="btn-center btn-primera">.</button>
+                <button class="btn-center btn-primera-extra">.</button>
             </div>
             <div class="carousel-item">
                 <img src="../img /segunda.jpg" class="d-block w-100" alt="...">
+                <button class="btn-center btn-segunda">.</button>
             </div>
             <div class="carousel-item">
                 <img src="../img /tercera.jpg" class="d-block w-100" alt="...">
+                <button class="btn-center btn-tercera">.</button>
             </div>
             <div class="carousel-item">
                 <img src="../img /cuarta.jpg" class="d-block w-100" alt="...">
+                <button class="btn-center btn-cuarta">.</button>
             </div>
             <div class="carousel-item">
                 <img src="../img /quinta.jpg" class="d-block w-100" alt="...">
+                <button class="btn-center btn-quinta">.</button>
             </div>
             <div class="carousel-item">
                 <img src="../img /sexta.jpg" class="d-block w-100" alt="...">
+                <button class="btn-center btn-sexta">.</button>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
