--- a/pages/porque.html
+++ b/pages/porque.html
@@ -52,6 +52,8 @@
                 <img src="../img /primera.jpg" class="d-block w-100" alt="...">
                 <button class="btn-center btn-primera">.</button>
                 <button class="btn-center btn-primera-extra">.</button>
+                <button class="btn-center btn-primera-extra-extra">.</button>
+                <button class="btn-center btn-primera-extra-extra-extra">.</button>
             </div>
             <div class="carousel-item">
                 <img src="../img /segunda.jpg" class="d-block w-100" alt="...">
